@@ -197,6 +197,12 @@ task runAndPublishConsumerPactTests(type: Test, description: 'Publish pact test 
 	classpath = sourceSets.contractTest.runtimeClasspath
 }
 
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
 runAndPublishConsumerPactTests.finalizedBy pactPublish
 
 pact {
@@ -365,6 +371,7 @@ dependencies {
 
 
 	testImplementation group: 'org.yaml', name: 'snakeyaml', version: '1.27'
+	testCompile 'com.github.hmcts:fortify-client:1.2.0:all'
 
 	integrationTestImplementation group: 'org.yaml', name: 'snakeyaml', version: '1.27'
 
